Update the start page
Add title
Add 3 menu buttons

--- a/qml.qrc
+++ b/qml.qrc
@@ -12,5 +12,7 @@
         <file>Images/Halve.png</file>
         <file>Images/Background.png</file>
         <file>Images/Star.png</file>
+        <file>Images/Title.png</file>
+        <file>QML/MenuButton.qml</file>
     </qresource>
 </RCC>
