Add Stone particles to have a better gameplay
Need some updates to make it work

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,6 +6,7 @@
         <file>QML/Halve.qml</file>
         <file>QML/Receipe.qml</file>
         <file>QML/Stone.qml</file>
+        <file>QML/StoneParticles.qml</file>
         <file>QML/StartPage.qml</file>
         <file>Images/Stone.png</file>
         <file>Images/Hole.png</file>
