Add the KLoading page
It was not the most wanted feature but I needed a
little bit of fun on this customer pressure projet.

Also updated some WorkingFiles.

--- a/qml.qrc
+++ b/qml.qrc
@@ -22,5 +22,8 @@
         <file>Images/ValidateButton.png</file>
         <file>QML/Separator.qml</file>
         <file>QML/BoardButton.qml</file>
+        <file>Images/KGears.png</file>
+        <file>Images/KIco.png</file>
+        <file>QML/KLoading.qml</file>
     </qresource>
 </RCC>
