Many updates done in holidays
WinPage says who is winning
The stones have the number of taken stone with candy style
Scores need some fix

--- a/qml.qrc
+++ b/qml.qrc
@@ -26,5 +26,7 @@
         <file>Images/KIco.png</file>
         <file>QML/KLoading.qml</file>
         <file>QML/WinPage.qml</file>
+        <file>Images/MessageBox.png</file>
+        <file>Ressources/CANDY.TTF</file>
     </qresource>
 </RCC>
