Introduce the web socket in the Client.

--- a/Client/qml.qrc
+++ b/Client/qml.qrc
@@ -30,5 +30,6 @@
         <file>QML/Stone.qml</file>
         <file>QML/StoneParticles.qml</file>
         <file>QML/WinPage.qml</file>
+        <file>QML/AwaleSocket.qml</file>
     </qresource>
 </RCC>
