Make the startPage with play and exit buttons
Also make the links to next page to validate the whole menu system.
Begin the implementation on the next page.

--- a/Client/qml.qrc
+++ b/Client/qml.qrc
@@ -38,5 +38,6 @@
         <file>QML/Page.qml</file>
         <file>QML/MenuBackground.qml</file>
         <file>QML/LoginPage.qml</file>
+        <file>QML/TextField.qml</file>
     </qresource>
 </RCC>
