Several changes on menu
Add a new item, the picture chooser
Update the AccountCreationPage

--- a/Client/qml.qrc
+++ b/Client/qml.qrc
@@ -41,5 +41,6 @@
         <file>Images/TextBackground.png</file>
         <file>QML/MessageBox.qml</file>
         <file>Images/CancelButton.png</file>
+        <file>QML/PictureChooser.qml</file>
     </qresource>
 </RCC>
