--- a/Client/qml.qrc
+++ b/Client/qml.qrc
@@ -47,5 +47,6 @@
         <file>Images/BoardBackButton.png</file>
         <file>Images/GamesListButton.png</file>
         <file>Images/HomeButton.png</file>
+        <file>QML/Game/AccountPage.qml</file>
     </qresource>
 </RCC>
