Add the element in the qml so that it can be loaded.
Fixes the QML crash.

--- a/Client/qml.qrc
+++ b/Client/qml.qrc
@@ -48,5 +48,6 @@
         <file>Images/GamesListButton.png</file>
         <file>Images/HomeButton.png</file>
         <file>QML/Game/AccountPage.qml</file>
+        <file>QML/Elements/MenuText.qml</file>
     </qresource>
 </RCC>
