Client: adjust the picture and some menu elements

--- a/Client/Awale/qml.qrc
+++ b/Client/Awale/qml.qrc
@@ -47,5 +47,6 @@
         <file>Images/HomeButton.png</file>
         <file>QML/Game/AccountPage.qml</file>
         <file>QML/Elements/MenuText.qml</file>
+        <file>Ressources/TribecaRegular.ttf</file>
     </qresource>
 </RCC>
