Client: * Arrange menu on board to add the game list * Add the possibility to play one V one (with the next asker)
TODO: Fix 1v1 way to play and add a picture on the side you play (or something similar)

--- a/Client/Awale/qml.qrc
+++ b/Client/Awale/qml.qrc
@@ -48,5 +48,6 @@
         <file>QML/Game/AccountPage.qml</file>
         <file>QML/Elements/MenuText.qml</file>
         <file>Ressources/TribecaRegular.ttf</file>
+        <file>QML/Elements/GameList.qml</file>
     </qresource>
 </RCC>
